--- a/_include/css/main.css
+++ b/_include/css/main.css
@@ -299,9 +299,9 @@ h3.spec {
 #home-slider {
 	position: relative;
 	overflow: hidden;
-	height: 91%;
-	border-right: 10px solid;
-	border-left: 10px solid;
+	height: 88%;
+	border-right: 50px solid;
+	border-left: 50px solid;
 	border-color: white;
 }
 
@@ -490,7 +490,7 @@ header {
 header .sticky-nav {
 	position: relative;
 	width: 100%;
-	height: 70px;
+	height: 90px;
 	background: #FFFFFF;
 	z-index: 1001;
 	
@@ -509,7 +509,7 @@ header .sticky-nav.stuck {
 header #logo {
 	color: #FFFFFF;
 	float: left;
-	padding: 3px 0;
+	padding: 15px 0;
 	margin-left: 20px;
 }
 
@@ -536,6 +536,7 @@ header #logo a:hover {
 nav#menu {
 	float: right;
 	margin-right: 20px;
+	margin-top: 15px;
 }
 
 nav#menu #menu-nav {
@@ -790,13 +791,25 @@ nav#menu #menu-nav li a:hover {
 	filter: alpha(opacity=100);
 }
 
-
 /* ==================================================
    About Section
 ================================================== */
+.row-fluid {
+    height: 250px;
+}
+
+.row-fluid p{
+    padding-right: 15px;
+}
 
 .profile-name {
 	margin-bottom: 15px;	
+}
+
+.column {
+    height: 100%;
+    overflow: auto;
+    *zoom:1;
 }
 
 .profile-description {
