--- a/_include/css/fancybox/jquery.fancybox.css
+++ b/_include/css/fancybox/jquery.fancybox.css
@@ -292,7 +292,8 @@
 }
 
 .fancybox-title-inside-wrap {
-	padding: 25px 30px 30px;
+	/*padding: 25px 30px 30px;*/
+	padding: 10px 10px 10px;
 }
 
 .fancybox-title-over-wrap {
