--- a/_include/css/shortcodes.css
+++ b/_include/css/shortcodes.css
@@ -9,7 +9,7 @@
   	-webkit-border-radius: 0;
        -moz-border-radius: 0;
             border-radius: 0;
-  	background-color: #3C3F45;
+  	background-color: #45A093;
   	color: #23262C;
   	vertical-align: middle;
   	text-align: center;
@@ -32,7 +32,7 @@
 .button:hover,
 .button:active,
 .button:focus {
-	background-color: #DE5E60;
+	background-color: #5CB495;
 	color:#FFFFFF;
 }
 
