--- a/_include/css/shortcodes.css
+++ b/_include/css/shortcodes.css
@@ -49,8 +49,9 @@
 }
 
 .button.button-mini {
-  	padding: 4px 12px;
+  	padding: 1px 12px;
   	font-size: 12px;
+    margin-top: 8px;
 }
 
 .button.button-block {
